sass/custom/_styles.scss
// This File is imported last, and will override other styles in the cascade
// Add styles here to make changes without digging in too much

// General styles
$header-bg: #000 !default;

body > header {
  background-image:url('/images/header.gif');
  background-repeat:repeat-x;
  h1 {
    display: inline-block;
    margin: 0;
    a, a:visited, a:hover {
      color: $title_color;
      text-decoration: none;
    }
  }
}

html {
  background: #D0CECE image-url('bkgrd.png') repeat-x top left;
}

@media only screen and (min-width: 992px) {
  body { font-size: 1em; }
}

blockquote {
  font-size: 1em;
}

// sidebar
p.stack {
    border:none;
    margin-top:4em; 
    padding-left:1em
}

p.arch {
    border:none;
    padding-left:1em;
}

aside.sidebar img {
    border:none; 
    border-radius:none; 
    box-shadow:none;
}

// codeblocks
.highlight, html .gist .gist-file .gist-syntax .gist-highlight {
  table td.code { width: 100%; }
  .line-numbers {
      border: none;
      text-shadow: none;
      background: none #121212 !important;
      span { color: #444 !important; } 
  }
}

.pre-code {
    background: #121212;
}

p, li {
  code {
    color: #222;
    border: none;
    @include border-radius(0);
  }
}

.code-title {
    border: none;
    text-shadow: none;
    background: none #CCC;
    @include border-radius(0);
}

// Grace notes
.credit { float: right; }

.file {
    color: #000;
    font-family: monospace;
    font-size: 1.1em; 
}

hr {
     background-color: #AAAAAA;
     border: 0pt none;
     color: #AAAAAA;
     height: 1px;
     margin-bottom: 2em;
     width: 100%;
}

kbd {
     background: none repeat scroll 0% 0% #E9E9E9;
     border-bottom: 1px solid #AAAAAA;
     border-right: 1px solid #AAAAAA;
     display: inline;
     font-family: monospace;
     font-size: 1.1em;
     font-weight: normal;
     padding: 1px 5px;
}


sup { 
    vertical-align: super; 
    font-size: 0.75em;
}

ol, ul { padding-left: 1.4em; }

